--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name =".NewTaskActivity"
+            android:theme="@android:style/Theme.Holo.Dialog" />
+        <activity
             android:name=".SettingsActivity"
             android:theme="@style/AppThemeTopBar" />
         <activity android:name=".IntroSlideActivity" />
