--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".SignUpActivity"
+            android:theme="@style/AppThemeTopBar" />
         <activity
             android:name=".SettingsActivity"
             android:theme="@style/AppThemeTopBar" />
         <activity android:name=".IntroSlideActivity" />
-        <activity android:name=".LoginRegisterActivity" />
+        <activity
+            android:name=".LoginRegisterActivity"
+            android:theme="@style/AppThemeTopBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
