--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileActivity"></activity>
-        <activity android:name=".EditProfileActivity" />
+        <activity android:name=".ProfileActivity"
+            android:theme="@style/AppThemeTopBar" />
+        <activity android:name=".EditProfileActivity"
+            android:theme="@style/AppThemeTopBar"/>
         <activity android:name=".TasksActivity" />
         <activity
             android:name=".SignUpActivity"
