Rename LoginRegisterActivity til LoginActivity, activity_login_register til activity_login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:theme="@style/SettingsTheme" />
         <activity android:name=".IntroSlideActivity" />
         <activity
-            android:name=".LoginRegisterActivity"
+            android:name=".LoginActivity"
             android:theme="@style/AppThemeTopBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
