--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,7 @@
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppThemeTopBar" />
-        <activity android:name=".MainActivity"
-            android:theme="@style/AppThemeTopBar" >
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
