--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".UpdatePasswordActivity"
-            android:theme="@style/AppThemeTopBar" />/>
+            android:theme="@style/AppThemeTopBar" />
         <activity
             android:name=".AchievementsActivity"
             android:theme="@style/AppThemeTopBar" />
@@ -69,7 +69,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths"/>
         </provider>
     </application>
 
